--- a/server-example/app.css
+++ b/server-example/app.css
@@ -1,4 +1,6 @@
 @import url('@webformula/material/theme.css');
+@import url('./dracula.css');
+@import url('./font.css');
 :root {
   color-scheme: light;
 }
