--- a/docs/app.css
+++ b/docs/app.css
@@ -1,27 +1,39 @@
 @import url('@webformula/material/theme.css');
-@import url('./font.css');
 @import url('./dracula.css');
-
-html {
+@import url('./font.css');
+:root {
   color-scheme: light;
-  overflow-x: hidden;
-  overflow-y: auto;
 }
 
 body page-content {
   padding: 24px !important;
 }
 
-ul {
-  list-style: none;
+.page-title {
+  margin-bottom: 0;
 }
 
-ul li::before {
-  content: "";
-  color: rgb(41, 41, 41);
-  font-weight: bold;
-  width: 24px;
+.page-subheader {
+  margin-top: 8px;
+}
+
+.page-secondary-header {
+  margin-bottom: 18px;
+}
+
+.page-list {
+  list-style-type: none;
   margin-left: -24px;
+  margin-top: -4px;
+  font-size: 18px;
+  line-height: 32px;
+  color: rgb(10, 100, 112);
+}
+
+.page-list strong {
+  font-weight: bold;
+  font-size: 20px;
+  margin-right: 2px;
 }
 
 section {
@@ -53,11 +65,9 @@ mdw-card .example {
 .links {
   display: flex;
   flex-direction: column;
-}
-
-ul.links {
+  list-style-type: none;
   margin-top: 12px;
-  padding-left: 32px;
+  padding-left: 16px;
 }
 
 .links a {
