--- a/docs/app.css
+++ b/docs/app.css
@@ -18,6 +18,7 @@ body page-content {
 
 .page-secondary-header {
   margin-bottom: 18px;
+  margin-top: 28px;
 }
 
 .page-list {
@@ -146,4 +147,14 @@ page-content > section > mdw-card {
   display: flex;
   line-height: 40px;
   align-items: center;
+}
+
+.route-list {
+  padding: 4px 0;
+}
+
+.route-list span {
+  background-color: rgba(0, 0, 0, 0.1);
+  padding: 2px 8px;
+  border-radius: 4px;
 }
