--- a/docs/app.css
+++ b/docs/app.css
@@ -1,5 +1,11 @@
-@import url(./theme.css);
+@import url(./colorTokens.css);
 @import url('./dracula.css');
+
+html:not(.mdw-initiated) {
+  opacity: 0;
+  pointer-events: none;
+}
+
 :root {
   color-scheme: light;
 }
