update material version update translations

--- a/docs/app.css
+++ b/docs/app.css
@@ -54,35 +54,35 @@ pre > code {
   overflow-x: auto;
 }
 
-mdw-card > pre:first-of-type > code {
+wfc-card > pre:first-of-type > code {
   margin-top: 8px;
 }
 
-mdw-card > pre:last-of-type > code {
-  border-radius: 0 0 var(--mdw-shape-medium) var(--mdw-shape-medium);
+wfc-card > pre:last-of-type > code {
+  border-radius: 0 0 var(--wfc-shape-medium) var(--wfc-shape-medium);
 }
 
-mdw-card .example {
+wfc-card .example {
   margin-top: 18px;
 }
 
-mdw-card .mdw-card-content {
+wfc-card .card-content {
   padding: 24px !important;
 }
 
-mdw-card.header-card {
+wfc-card.header-card {
   margin-top: 16px;
   margin-bottom: 48px;
   padding-bottom: 8px;
   box-shadow: none;
 }
 
-mdw-card > .mdw-card-content > .mdw-headline + .mdw-subheader {
+wfc-card > .card-content > .headline + .supporting-text {
   margin-top: 2px;
 }
 
-page-content > section > mdw-card,
-page-content > section > .page-content-container > mdw-card {
+page-content > section > wfc-card,
+page-content > section > .page-content-container > wfc-card {
   margin-bottom: 36px;
 }
 
@@ -131,7 +131,7 @@ page-content > section > .page-content-container > mdw-card {
 }
 
 
-.mdw-supporting-text + .example {
+.supporting-text + .example {
   margin-top: 32px;
 }
 
@@ -157,7 +157,7 @@ page-content > section > .page-content-container > mdw-card {
   flex-direction: row-reverse;
   justify-content: center;
 }
-body.mdw-window-compact .page-content-section {
+body.wfc-window-compact .page-content-section {
   flex-direction: column;
 }
 
@@ -190,6 +190,6 @@ body.mdw-window-compact .page-content-section {
   flex: 1;
 }
 
-.page-content-container > mdw-card:first-of-type {
+.page-content-container > wfc-card:first-of-type {
   margin-top: 48px;
 }
